Write Chapters 02-10: JDK/JRE/JVM through String
Completes the first arc of Phase 1 Foundation (Chapters 01-10), covering the
full JVM startup story: JDK/JRE/JVM layering, the 3-tier ClassLoader parent
delegation model, Runtime Data Areas (Heap/Stack split), the Interpreter's
stack-based bytecode execution, JIT tiered compilation (C1/C2), generational
GC, then pivoting into language fundamentals (OOP pillars, Object, String)
that the rest of the handbook builds on.

Every runnable example and every claimed command/log line was executed
against JDK 17 locally before being written into the chapter, not
reconstructed from memory:
- Ch03: real getClassLoader() output for String vs a user class
- Ch04: real StackOverflowError (~45892 frames) and OutOfMemoryError
  (-Xmx64m, 15 blocks) traces
- Ch05: real javap -c bytecode for a plain int add(), hand-traced against
  the operand stack
- Ch06: real -Xint vs default JIT timing comparison (~7x)
- Ch07: real -Xlog:gc output from G1 on a bounded heap
- Ch08: real polymorphism/overload/override demos (payment methods,
  discounted product)
- Ch09: real default Object.toString()/equals()/hashCode() output
- Ch10: real String pool identity behavior (==, new String, intern())

Each chapter cross-references rather than repeats material already covered
earlier (Part 3 §1), and Difficulty/Importance were calibrated per chapter
per Part 2 §25 instead of applying the heaviest template uniformly.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>